<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bike Orlando</string>
    <string name="placeholder">Placeholder</string>
    <string name="streetview_urlpath">file:///android_asset/streetview.html</string>
    <!-- GROUPS -->
    <string name="group_driving">Driving</string>
    <string name="group_biking">Biking</string>
    <string name="group_events">Events</string>
    <!-- EVENTS -->
    <string name="event_listings_url">http://www.toxicbakery.com/events/events.php</string>
    <string name="event_button_list">See Events</string>
    <string name="event_price_range_format">Tickets from $%1$s - $%2$s</string>
    <string name="events_error_loading">Failed to load events from remote server.</string>
    <!-- PARKING -->
    <string name="parking_price_hourly">Hourly</string>
    <string name="parking_price_event">Event</string>
    <string name="parking_price_max_daily">Daily</string>
    <!-- RACK -->
    <string name="rack_ownership">Owned by ?</string>
    <string name="rack_type">Type: ?</string>
    <string name="rack_capacity">Capacity: ?</string>
    <string name="fab_route_to_point">Request a route to this point.</string>
    <string name="error_no_mapping_app">No navigation application found, unable to route to point.</string>
    <!-- Display Features -->
    <string name="display_feature_racks">Bike Racks</string>
    <string name="display_feature_bike_paths">Bike Paths</string>
    <string name="display_feature_parking">Parking</string>
    <string name="display_feature_events_ticketed">Ticketed</string>

</resources>
