<?xml version="1.0" encoding="utf-8"?>

<com.codefororlando.transport.view.SlidingYRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                          xmlns:tools="http://schemas.android.com/tools"
                                                          android:layout_width="match_parent"
                                                          android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_size_half"
        android:background="?android:colorBackground">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorPrimaryDark"/>

        <TextView
            android:id="@+id/rack_text_view_address"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:lines="1"
            android:padding="@dimen/rack_padding"
            android:singleLine="true"
            android:text="@string/placeholder"/>

        <TextView
            android:id="@+id/rack_text_view_ownership"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rack_text_view_address"
            android:padding="@dimen/rack_padding"
            android:text="@string/rack_type"/>

        <TextView
            android:id="@+id/rack_text_view_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:padding="@dimen/rack_padding"
            android:text="@string/rack_ownership"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/rack_text_view_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/rack_text_view_address"
            android:lines="1"
            android:padding="@dimen/rack_padding"
            android:text="@string/rack_capacity"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/fab_route_to_point"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/fab_button"
        android:contentDescription="@string/fab_route_to_point"
        android:elevation="@dimen/elevation_high"
        android:src="@drawable/fab_bike"
        android:tint="@android:color/white"
        tools:ignore="UnusedAttribute"/>

</com.codefororlando.transport.view.SlidingYRelativeLayout>